# TransitGPT

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  benchmark_app.py  chat_app.py  docker-compose.yml  exp.py  generate_prompt.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
components/: chat_input_box.py  chat_interface.py  response_processor.py  sidebar.py  state.py
data/: few_shot.json  few_shot.yaml  few_shot_viz.yaml  sample_questions.json
evaluator/: eval_code.py  eval_imports.py
gtfs_agent/: agent.py  gtfs_loader.py  llm_client.py
gtfs_data/: file_mapping.json
gtfs_data/feed_pickles/: AC Transit_gtfs_loader.pkl  CTA_gtfs_loader.pkl  CUMTD_gtfs_loader.pkl  Caltrain_gtfs_loader.pkl  DART_gtfs_loader.pkl  Go-RTS_gtfs_loader.pkl  MBTA_gtfs_loader.pkl  SDMTS_gtfs_loader.pkl  SFMTA_gtfs_loader.pkl  StarTran_gtfs_loader.pkl  VTA_gtfs_loader.pkl  samTrans_gtfs_loader.pkl
prompts/: all_prompts.py  generate_few_shot.py  generate_prompt.py  generated_prompt.md  gtfs_file_field_type.py
tests/: test_data_models.py  test_eval_code.py  test_find_stops.py  test_gtfs_loader.py  test_llm_client.py  test_timeout.py
tests/test_pickle_feed/: CUMTD_gtfs_loader.pkl
utils/: agent.py  constants.py  data_models.py  eval_code.py  eval_imports.py  feedback.py  find_stops.py  generate_feed_pickles.py  geocoder.py  gtfs_loader.py  helper.py  llm_client.py  logger.py  response_processor.py  sample_questions.py  save_visuals.py  state.py
